added Frida port checking and mount status checking for advanced detection.